examples/qualification/executable_module_entry/negative_transitive_duplicate_symbol_collision/src/beta.sm
fn score() -> i32 {
    return 2;
}

fn beta_score() -> i32 {
    return score();
}
